--- a/app/src/main/res/layout/fragment_catalog.xml
+++ b/app/src/main/res/layout/fragment_catalog.xml
@@ -45,83 +45,20 @@
 
     </LinearLayout>
 
-    <HorizontalScrollView
-        android:id="@+id/horizontal_scroll"
+    <androidx.recyclerview.widget.RecyclerView
+        android:orientation="horizontal"
+        android:id="@+id/list_categories"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@id/linearMSearch">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bc_blue_shape"
-                android:fontFamily="@font/mtn_brighter_sans_medium"
-                android:gravity="center"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:text="@string/all"
-                android:textColor="@color/white"
-                android:textSize="11sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:fontFamily="@font/mtn_brighter_sans_regular"
-                android:gravity="center"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:text="Not processed"
-                android:textColor="@color/et_color_black_100_opacity"
-                android:textSize="11sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:gravity="center"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:text="Not processed"
-                android:textSize="11sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:gravity="center"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:text="Not processed"
-                android:textSize="11sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:gravity="center"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:text="Not processed"
-                android:textSize="11sp" />
-
-        </LinearLayout>
-    </HorizontalScrollView>
-
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/linearMSearch"/>
 
     <TextView
+        android:layout_marginTop="10dp"
         android:id="@+id/tvOrdersCount"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_28sdp"
-        android:layout_marginTop="16dp"
         android:background="@drawable/ic_rectangle_grey"
         android:fontFamily="@font/mtn_brighter_sans_regular"
         android:gravity="center|start"
@@ -131,7 +68,7 @@
         android:text="0 products "
         android:textColor="@color/gray_light"
         android:textSize="@dimen/_11sdp"
-        app:layout_constraintTop_toBottomOf="@id/horizontal_scroll" />
+        app:layout_constraintTop_toBottomOf="@id/list_categories" />
 
 
     <View
