--- a/app/src/main/res/drawable/ic_catalog_white.xml
+++ b/app/src/main/res/drawable/ic_catalog_white.xml
@@ -1,5 +1,17 @@
-<vector android:autoMirrored="true" android:height="24dp"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#fff" android:pathData="M5,22a2.149,2.149 0,0 1,-2 -2L3,8.7A2.019,2.019 0,0 1,2 7.01L2,4A2.074,2.074 0,0 1,4 2L20,2a2.074,2.074 0,0 1,2 2L22,7.01A2.019,2.019 0,0 1,21 8.7L21,20a2.149,2.149 0,0 1,-2 2Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="20dp"
+    android:height="20dp"
+    android:viewportWidth="20"
+    android:viewportHeight="20">
+  <group>
+    <clip-path
+        android:pathData="M18,0L2,0a2.074,2.074 0,0 0,-2 2v3.01a2.021,2.021 0,0 0,1 1.69v11.3a2.149,2.149 0,0 0,2 2h14a2.149,2.149 0,0 0,2 -2v-11.3a2.021,2.021 0,0 0,1 -1.69L20,2A2.074,2.074 0,0 0,18 0ZM13,12h-6v-2h6ZM18,5L2,5v-3l16,-0.02Z"/>
+    <group>
+      <clip-path
+          android:pathData="M-219,95h360L141,-1009L-219,-1009Z"/>
+      <path
+          android:pathData="M-1,-1h22v22L-1,21Z"
+          android:fillColor="#FFFFFF"/>
+    </group>
+  </group>
 </vector>
