--- a/app/src/main/res/drawable/ic_orders_white.xml
+++ b/app/src/main/res/drawable/ic_orders_white.xml
@@ -1,10 +1,17 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:autoMirrored="true"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="#fff"
-        android:pathData="M19.5,20.5 L18,22l-1.5,-1.5L15,22l-1.5,-1.5L12,22 10.5,20.5 9,22 7.5,20.5 6,22 4.5,20.5 3,22L3,2L4.5,3.5 6,2 7.5,3.5 9,2 10.5,3.5 12,2l1.5,1.5L15,2l1.5,1.5L18,2l1.5,1.5L21,2L21,22Z" />
+    android:width="18dp"
+    android:height="20dp"
+    android:viewportWidth="18"
+    android:viewportHeight="20">
+  <group>
+    <clip-path
+        android:pathData="M15,15L3,15v-2h12ZM15,11L3,11v-2h12ZM15,7L3,7v-2h12ZM0,20 L1.5,18.5 3,20 4.5,18.5 6,20 7.5,18.5 9,20 10.5,18.5 12,20 13.5,18.5 15,20 16.5,18.5 18,20v-20l-1.5,1.5L15,0l-1.5,1.5L12,0l-1.5,1.5L9,0l-1.5,1.5L6,0l-1.5,1.5L3,0l-1.5,1.5L0,0Z"/>
+    <group>
+      <clip-path
+          android:pathData="M-130,94h360L230,-1010L-130,-1010Z"/>
+      <path
+          android:pathData="M-1,-1h20v22L-1,21Z"
+          android:fillColor="#FFFFFF"/>
+    </group>
+  </group>
 </vector>
