--- a/app/src/main/res/layout/fragment_modal_bottom_sheet_confrim_dispatch.xml
+++ b/app/src/main/res/layout/fragment_modal_bottom_sheet_confrim_dispatch.xml
@@ -56,6 +56,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
+                android:enabled="false"
                 android:hint="@string/delivaryaddress_normal"
                 android:imeOptions="actionNext"
                 android:inputType="textPersonName"
@@ -90,12 +91,13 @@
             app:hintTextColor="@color/gray">
 
             <EditText
-                android:id="@+id/etPickupAddress"
+                android:id="@+id/etPickupInstructions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
+                android:enabled="false"
                 android:hint="@string/pickupinstructions"
                 android:imeOptions="actionNext"
                 android:inputType="textPostalAddress"
