--- a/app/src/main/res/layout/fragment_modal_bottom_sheet_dispatch.xml
+++ b/app/src/main/res/layout/fragment_modal_bottom_sheet_dispatch.xml
@@ -57,6 +57,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
+                android:enabled="false"
                 android:hint="@string/delivaryaddress"
                 android:imeOptions="actionNext"
                 android:inputType="textPersonName"
@@ -69,7 +70,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/ic_edit_black_24dp_2" />
+            android:src="@drawable/ic_edit_black_24dp_2"
+            android:visibility="gone" />
 
     </LinearLayout>
 
@@ -95,7 +97,7 @@
             app:hintTextColor="@color/gray">
 
             <EditText
-                android:id="@+id/etPickupAddress"
+                android:id="@+id/etPickupInstructions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
