--- a/app/src/main/res/layout/fragment_modal_bottom_sheet_cancel.xml
+++ b/app/src/main/res/layout/fragment_modal_bottom_sheet_cancel.xml
@@ -96,6 +96,7 @@
             android:textSize="@dimen/_11sdp" />
 
         <TextView
+            android:id="@+id/tvTotalAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_4sdp"
